--- a/pub.html
+++ b/pub.html
@@ -61,12 +61,12 @@ var publications = TAFFY([
         style:"article",
         title:"One Dimensional Mimicking of Electronic Structure: The Case for Exponentials",
         author: "T.E. Baker, E.M. Stoudenmire, L.O. Wagner, K. Burke, and S.R. White",
-        journal:"accepted to PRB",
-        //volume:"",
+        journal:"Phys. Rev. B",
+        volume:"91",
         img:"i/1dH10expsc.png",
-        //pages:"052512",
+        pages:"235141",
         year:2015,
-        //url:"http://link.aps.org/doi/10.1103/PhysRevA.90.052512",
+        url:"http://link.aps.org/doi/10.1103/PhysRevB.91.235141",
         eprint:"p/BSWB15.pdf",
         lowid:10,
         content:"Examining the use of exponential interactions, which speed up DMRG calculations, " +
