new life goals!

--- a/about.html
+++ b/about.html
@@ -31,12 +31,13 @@
 
 
 <li>
-<a href="#research">Research</a>
+<a href="#creations">Creations</a>
 </li>
 
 <li>
-<a href="#creations">Creations</a>
+<a href="#research">Research</a>
 </li>
+
 
 <li>
 <a href="#life">Life</a>
@@ -72,9 +73,8 @@ document.getElementById("demo").innerHTML=x;
 <tr>
 <td>
 <p class=withstyle> My name is Lucas Wagner.</p>
-<p class=withstyle>For a living, I do research in theoretical physics
-and chemistry, and I enjoy coding as a hobby.
-</p>
+<p class=withstyle>I write code with an open-source bent, music with an electronic/classical 
+feel, and then I draw comics.</p>
 
 </td>
 <td>
@@ -126,10 +126,7 @@ Contact
 <p>Present affiliation:</p>
 
 <p class=tab>
-Department of Theoretical Chemistry - Faculty of Sciences<br>
-Vrije Universiteit Amsterdam<br>
-De Boelelaan 1083<br>
-1081 HV Amsterdam, The Netherlands
+Independent developer.
 </p>
 
 <p>Electronic mail address:</p>
@@ -137,6 +134,34 @@ De Boelelaan 1083<br>
 </li>
 
 
+
+<a id="creations">
+</a>
+<li>
+<table>
+<tr>
+<td class=mainentryfull>
+Creations
+</td>
+<!--<td class=mainentrydate>circa 1980s</td>-->
+</tr>
+</table>
+<p>
+I enjoy attempting to make games and other useful content.
+Check out my <a href="code.html">coding</a> webpage for links of what I've done
+in the past and what I'm working on now.
+I support open source programming, so most of the releasable code is here on github.
+Various "helpful" code-snippets 
+may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
+to other things.
+</p>
+<p>
+Ages ago I wrote some <a href="http://ible.bandcamp.com" target="lowband">electronic music</a>,
+which may sound appealing to some (and a little grating on others).</p>
+<p>
+  If you want to support my work, <a href="https://www.patreon.com/lowagner" target="lowpat">click here</a>!
+</p>
+</li>
 
 <a id="research">
 </a>
@@ -150,10 +175,9 @@ Research interests
 </tr>
 </table>
 <p>
-My interest is in the methods used to tackle
-the quantum many-body problem, specifically in the realm of electronic structure. 
- I seek to understand and develop
-insightful approaches, and test approximations by writing code.
+I have pursued some unique and interesting ideas to solve 
+the quantum many-body problem, specifically electronic structure
+using density functional theory.
 </p>
 
 <table class=nostyle>
@@ -177,33 +201,6 @@ specifically <a href="pub.html?t=nutshell">DFT in a nutshell</a>, which made the
 
 </li>
 
-
-<a id="creations">
-</a>
-<li>
-<table>
-<tr>
-<td class=mainentryfull>
-Creations
-</td>
-<!--<td class=mainentrydate>circa 1980s</td>-->
-</tr>
-</table>
-<p>
-In addition to coding for research,
-I enjoy attempting to make games and other useful content.
-Check out my <a href="code.html">coding</a> webpage for links of what I've done
-in the past and what I'm working on now.
-I support open source programming, so most of the releasable code is here on github.
-Various "helpful" code-snippets 
-may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
-to other things.
-</p>
-<p>
-Ages ago I wrote some <a href="http://ible.bandcamp.com" target="lowband">electronic music</a>,
-which may sound appealing to some (and a little grating on others).
-</p>
-</li>
 
 
 <a id="life">
