--- a/code.html
+++ b/code.html
@@ -23,7 +23,8 @@
 showfilters( "code.html", [ [ "s", "all" ], 
                             [ "ys", 2009 ],
                             [ "ys", 2013 ],
-                            [ "ys", 2014 ] ] );
+                            [ "ys", 2014 ],
+                            [ "ys", 2015 ] ] );
 </script>
 </div>
 
@@ -38,6 +39,17 @@ showfilters( "code.html", [ [ "s", "all" ],
 
 <script>
 var projects = TAFFY([
+    {
+        title:"BBGunner",
+        url:"https://github.com/lowagner/bitbox-bbgunner",
+        yearstart:2015,
+        yearend:2015,
+        img:"i/bbgunner.png",
+        content:"BBGunner allows you to face off against a friend in this retro "+
+            "low-res first-person-shooter.  Your gun adapts to your play style, allowing"+
+            "you to machine gun your way to victory or become a sniper.",
+        tags:"game, C/c++"
+    },
     {
         title:"Memory Matrix",
         url:"https://github.com/lowagner/bitbox-mmat",
