new checkers game

--- a/code.html
+++ b/code.html
@@ -40,6 +40,15 @@ showfilters( "code.html", [ [ "s", "all" ],
 <script>
 var projects = TAFFY([
     {
+        title:"Checkers 3D",
+        url:"https://github.com/lowagner/bitbox-checkers3d",
+        yearstart:2015,
+        yearend:2015,
+        img:"i/check3d.png",
+        content:"Is it a battle for the stars?  Yes!  Based on the rules of checkers, probably. ",
+        tags:"game, C/c++"
+    },
+    {
         title:"BBGunner",
         url:"https://github.com/lowagner/bitbox-bbgunner",
         yearstart:2015,
