--- a/code.html
+++ b/code.html
@@ -40,6 +40,15 @@ showfilters( "code.html", [ [ "s", "all" ],
 <script>
 var projects = TAFFY([
     {
+        title:"Snake",
+        url:"https://github.com/lowagner/bitbox-snake",
+        yearstart:2015,
+        yearend:2015,
+        img:"i/snake.png",
+        content:"A clone of the classic game, featuring dueling, guns, and more to come.",
+        tags:"game, C/c++"
+    },
+    {
         title:"Checkers 3D",
         url:"https://github.com/lowagner/bitbox-checkers3d",
         yearstart:2015,
