new projects page

--- a/code.html
+++ b/code.html
@@ -30,9 +30,10 @@ showfilters( "code.html", [ [ "s", "all" ],
 
     <div id=taglinks>
     <script>
+    showtags( "code.html", ["mathematica", "python", "C/c++", "bash"] );
     showtags( "code.html", ["physics", "chemistry", "research"] );
     showtags( "code.html", ["game", "music", "money"] );
-    showtags( "code.html", ["mathematica", "python", "C/c++", "bash"] );
+    showtags( "code.html", ["bitbox"] );
     </script>
     </div>
 
@@ -46,7 +47,7 @@ var projects = TAFFY([
         yearend:2015,
         img:"i/snake.png",
         content:"A clone of the classic game, featuring dueling, guns, and more to come.",
-        tags:"game, C/c++"
+        tags:"bitbox game, C/c++"
     },
     {
         title:"Checkers 3D",
@@ -55,7 +56,7 @@ var projects = TAFFY([
         yearend:2015,
         img:"i/check3d.png",
         content:"Is it a battle for the stars?  Yes!  Based on the rules of checkers, probably. ",
-        tags:"game, C/c++"
+        tags:"bitbox game, C/c++"
     },
     {
         title:"BBGunner",
@@ -66,7 +67,7 @@ var projects = TAFFY([
         content:"BBGunner allows you to face off against a friend in this retro "+
             "low-res first-person-shooter.  Your gun adapts to your play style, allowing"+
             "you to machine gun your way to victory or become a sniper.",
-        tags:"game, C/c++"
+        tags:"bitbox game, C/c++"
     },
     {
         title:"Memory Matrix",
@@ -78,7 +79,7 @@ var projects = TAFFY([
             "It is designed for the <a href=\"http://bitboxconsole.blogspot.com/\" "+
             "target=\"bitboxblog\">bitbox console</a>, but you can play it on a "+
             "dev-ready computer.",
-        tags:"game, C/c++"
+        tags:"bitbox game, C/c++"
     },
     {
         title:"PyanoH3ro",
@@ -273,8 +274,8 @@ News
 Publications
 </a></li>
 
-<li><a href="teach.html" title="my courses">
-Teaching
+<li><a href="projects.html" title="work on something bigger than yourself">
+Projects
 </a></li>
 
 <li><span>
