--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@ else
 Publications
 </a></li>
 
-<li><a href="teach.html" title="my courses">
-Teaching
+<li><a href="projects.html" title="work on something bigger than yourself">
+Projects
 </a></li>
 
 
