--- a/about.html
+++ b/about.html
@@ -143,17 +143,13 @@ Independent developer.
 <td class=mainentryfull>
 Creations
 </td>
-<!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
 </table>
 <p>
-I enjoy attempting to make games and other useful content.
-Check out my <a href="code.html">coding</a> webpage for links of what I've done
-in the past and what I'm working on now.
-I support open source programming, so most of the releasable code is here on github.
-Various "helpful" code-snippets 
-may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
-to other things.
+I work on <a href="code.html">coding</a> games and other useful programs for various
+<a href="projects.html">devices</a>.  You may also find various "helpful" code-snippets 
+or reviews on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
+to a comic book about some deep questions of life.
 </p>
 <p>
 Ages ago I wrote some <a href="http://ible.bandcamp.com" target="lowband">electronic music</a>,
@@ -190,7 +186,7 @@ using density functional theory.
 <td>&nbsp;&nbsp;</td>
 <td>
 <p>
-In addition to original research papers, I have written articles to 
+In addition to original research papers, I've written articles to 
 explain the theories and approximations in use.  See my <a href="pub.html">publications</a>,
 specifically <a href="pub.html?t=nutshell">DFT in a nutshell</a>, which made the cover art!
 </p>
@@ -229,7 +225,7 @@ She even understands my humor sometimes.
 <center>
 <img src="i/al-2013.gif" alt="on a boat" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;" height="150">
 </center>
-I am also a proud father.
+I am also a proud dad.
 </p>
 </li>
 
@@ -268,8 +264,8 @@ News
 Publications
 </a></li>
 
-<li><a href="teach.html" title="my courses">
-Teaching
+<li><a href="projects.html" title="work on something bigger than yourself">
+Projects
 </a></li>
 
 <li><a href="code.html" title="my programming">
